crates/pvm-contract-macros/tests/ui/receive_with_payable.stderr
error: `#[receive]` is implicitly payable; remove the redundant `#[payable]` attribute
 --> tests/ui/receive_with_payable.rs:6:9
  |
6 | /         #[pvm_contract_macros::receive]
7 | |         #[pvm_contract_macros::payable]
8 | |         pub fn receive(&mut self) {}
  | |____________________________________^
